netcfg (0.65) UNRELEASED; urgency=low

  * Joshua Kwan
    - Fix machine state in static configuration to call QUIT.

 -- Otavio Salvador <otavio@debian.org>  Wed, 19 May 2004 17:01:43 -0300

netcfg (0.64) unstable; urgency=medium

  * Joshua Kwan
    - Split out all functions into static.c, dhcp.c, wireless.c.
    - Remove dep alternative to busybox-cvs-udeb etc., since udhcpc is no
      longer available in any initrd. This causes businesscard and netinst
      installs to fail because busybox is already provided and hence gets
      used.
    - Remove udhcpc support in dhcp.c.
    - Port wireless fixes back to netcfg-static and netcfg-dhcp, which
      have been rather neglected lately.
    - Fix the GO_BACK interaction between WEP and ESSID configuration.
    - Switch to using iproute for everything, a step towards removing
      ifconfig and route applets from busybox.
    - Add amd64 support. (Closes: #249363)
    - Open one set of socket FDs and use them for the whole runtime.
    - Write loopback all the time, even when you abort network config.
      (Closes: #248636)
    - Redesign DHCP strategy with a new template that uses a select,
      allowing the user to clearly alternate to static network config
      (Closes: #244901, #227722)
    - Display a brief note when DHCP lease gets acquired. (Closes: #247751)
    - Now we can ask for a DHCP hostname to add. (Closes: #236533, #239591)
    - If we didn't use one, see if the server is offering us one and seed
      netcfg/get_hostname with it. (Closes: #239121, #240701)
    - Failing that, bring the interface up and try to reverse-resolve
      the IP address into a hostname.
    - For idempotency reasons, down all interfaces after finding each
      one so that we can start from a clean slate. (Probably deals with
      Bug#227722)
    - Silently load af_packet. (Closes: #244441)
    - Add some code hunks from mii-diag to determine code path on link
      connection. (Closes: #247178)