@@ -9,7 +9,7 @@ Standards-Version: 3.6.1.0
 Package: netcfg
 XC-Package-Type: udeb
 Architecture: i386 sparc alpha m68k arm powerpc mips mipsel hppa ia64 amd64
-Depends: ${shlibs:Depends}, cdebconf-udeb, dhcp-client-udeb | dhcp3-client-udeb | pump-udeb, ethernet-card-detection, libiw27-udeb
+Depends: ${shlibs:Depends}, cdebconf-udeb, dhcp-client-udeb | dhcp3-client-udeb | pump-udeb, ethernet-card-detection, libiw27-udeb, mii-diag-udeb
 Provides: configured-network
 XB-Installer-Menu-Item: 18
 Description: Configure the network
@@ -22,7 +22,7 @@ Description: Configure the network
 Package: netcfg-dhcp
 XC-Package-Type: udeb
 Architecture: i386 sparc alpha m68k arm powerpc mips mipsel hppa ia64 amd64
-Depends: ${shlibs:Depends}, cdebconf-udeb, dhcp-client-udeb | dhcp3-client-udeb | pump-udeb, ethernet-card-detection, libiw27-udeb
+Depends: ${shlibs:Depends}, cdebconf-udeb, dhcp-client-udeb | dhcp3-client-udeb | pump-udeb, ethernet-card-detection, libiw27-udeb, mii-diag-udeb
 Provides: configured-network
 XB-Installer-Menu-Item: 18
 Description: Configure the network via DHCP
@@ -37,7 +37,7 @@ Description: Configure the network via DHCP
 Package: netcfg-static
 XC-Package-Type: udeb
 Architecture: any
-Depends: ${shlibs:Depends}, cdebconf-udeb, ethernet-card-detection, libiw27-udeb
+Depends: ${shlibs:Depends}, cdebconf-udeb, ethernet-card-detection, libiw27-udeb, mii-diag-udeb
 Provides: configured-network
 XB-Installer-Menu-Item: 20
 Description: Configure a static network
